--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -13,4 +13,5 @@
 <div>
     <a href="/api/sessions/github"><button>Ingresar con github</button></a>
 </div>
-<script src="src/public/js/login.js"></script>
+
+<script src="./js/login.js"></script>
