--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -1,33 +1,102 @@
 <div>
-    <form id="product-form">
-  <label for="title">Title:</label>
-  <input type="text" id="title" name="title" required>
+  <form id="product-form">
+    <label for="title">Title:</label>
+    <input type="text" id="title" name="title" required>
 
-  <label for="description">Description:</label>
-  <textarea id="description" name="description" required></textarea>
+    <label for="description">Description:</label>
+    <textarea id="description" name="description" required></textarea>
 
-  <label for="price">Price:</label>
-  <input type="number" id="price" name="price" required>
+    <label for="price">Price:</label>
+    <input type="number" id="price" name="price" required>
 
-  <label for="category">Category:</label>
-  <select id="category" name="category" required>
-  </select>
+    <label for="category">Category:</label>
+    <textarea id="category" name="category" required></textarea>
 
-  <label for="stock">Stock:</label>
-  <input type="number" id="stock" name="stock" required>
+    <label for="stock">Stock:</label>
+    <input type="number" id="stock" name="stock" required>
 
-  <label for="code">Code:</label>
-  <input type="text" id="code" name="code" required>
+    <label for="code">Code:</label>
+    <input type="text" id="code" name="code" required>
 
-  <button type="submit">Create product</button>
-</form>
+    <button type="submit">Create product</button>
+  </form>
 
-<form id="delete-product-form">
-  <label for="product-id">Product ID:</label>
-  <input type="text" id="product-id" name="product-id" required>
-  <button type="submit">Delete Product</button>
-</form>
-
+  <form id="delete-product-form">
+    <label for="product-id">Product ID:</label>
+    <input type="text" id="product-id" name="product-id" required>
+    <button type="submit">Delete Product</button>
+  </form>
 </div>
+
 <script src="/socket.io/socket.io.js"></script>
-<script src="/router/view.routers.js"></script>
+<script src="/routers/view.router.js"></script>
+<script>
+ 
+  const productForm = document.getElementById("product-form");
+
+  
+  productForm.addEventListener("submit", function (event) {
+    event.preventDefault(); 
+
+    
+    const title = document.getElementById("title").value;
+    const description = document.getElementById("description").value;
+    const price = document.getElementById("price").value;
+    const category = document.getElementById("category").value;
+    const stock = document.getElementById("stock").value;
+    const code = document.getElementById("code").value;
+
+    
+    const productData = {
+      title: title,
+      description: description,
+      price: price,
+      category: category,
+      stock: stock,
+      code: code,
+    };
+
+   
+    fetch("/api/products", {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/json",
+      },
+      body: JSON.stringify(productData),
+    })
+      .then((response) => response.json())
+      .then((data) => {
+    
+        console.log("Response from server:", data);
+        
+      })
+      .catch((error) => {
+     
+        console.error("Error:", error);
+      });
+  });
+
+  document.getElementById('delete-product-form').addEventListener('submit', function(event) {
+  event.preventDefault(); 
+
+  const productId = document.getElementById('product-id').value;
+
+
+  fetch(`/api/products/${productId}`, {
+    method: 'DELETE',
+  })
+  .then(response => {
+    if (response.ok) {
+      console.log('Producto eliminado exitosamente');
+
+    } else {
+      console.error('Error al eliminar el producto');
+
+    }
+  })
+  .catch(error => {
+    console.error('Error en la solicitud:', error);
+  });
+});
+
+</script>
