--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -20,4 +20,4 @@
     </form>
     <p>¿Ya tienes una cuenta? <a href="/login">Ingresa aquí</a></p>
 </div>
-<script src="src/public/js/register.js"></script>
+<script src="./js/register.js"></script>
