--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -17,7 +17,7 @@
     <p>{{this.category}}</p>
     <p>{{this.thumbnails}}</p>
 
-    <a href="/api/carts/cid/product/pid"><button>Agregar al carrito</button></a>
+   <a><button onclick="addToCart('{{this.id}}')">Agregar al carrito</button></a>
 
     {{/each}}
 
@@ -32,3 +32,40 @@
         <a href="/api/sessions/logout"><button>Salir</button></a>
 
 </div>
+
+<script>
+    function addToCart(productId) {
+        // Envía la solicitud POST para crear un carrito
+        fetch('/api/carts/', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+            },
+            body: JSON.stringify({}),
+        })
+        .then(response => response.json())
+        .then(cart => {
+            // Envía la solicitud POST para agregar el producto al carrito
+            fetch('/api/carts/cid/product/pid'.replace('cid', cart._id).replace('pid', productId), {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+            })
+            .then(response => response.json())
+            .then(updatedCart => {
+                // Maneja la respuesta y realiza las acciones necesarias
+                console.log(updatedCart);
+                // Puedes redirigir al usuario a la página del carrito o mostrar un mensaje de éxito aquí
+            })
+            .catch(error => {
+                // Maneja cualquier error en la solicitud
+                console.error(error);
+            });
+        })
+        .catch(error => {
+            // Maneja cualquier error en la solicitud
+            console.error(error);
+        });
+    }
+</script>
