--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+{{!-- <div class="container mt-5">
     <div class="mb-3 p-4 bg-primary bg-gradient text-dark bg-opacity-25 rounded-5">
         <h1 class="display-4">Bienvenido {{user.first_name}} {{user.last_name}}</h1>
         <p><strong>Email:</strong> {{user.email}}</p>
@@ -87,5 +87,5 @@
         const user = await data.json();
         return user.data;
     }
-</script>
+</script> --}}
 
