--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -66,7 +66,7 @@
                 fetch('/api/carts/', {
                     method: 'POST',
                     headers: {
-                        Authorization: `Bearer ${localStorage.getItem("token")}`
+                        Authorization: `Bearer ${localStorage.getItem('token')}`
                     },
                     body: JSON.stringify({}),
                 })
@@ -86,7 +86,7 @@
             fetch(`/api/carts/${currentCartId}/product/${productId}`, {
                 method: 'POST',
                 headers: {
-                    Authorization: `Bearer ${localStorage.getItem("token")}`
+                    Authorization: `Bearer ${localStorage.getItem('token')}`
                 },
             })
             .then(response => response.json())
